--- a/NPLTaskInterface.ipynb
+++ b/NPLTaskInterface.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,9 +32,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'HF_API_SUMMARY_BASE'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrequests\u001b[39;00m\u001b[38;5;241m,\u001b[39m \u001b[38;5;21;01mjson\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m#Summarization endpoint\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_completion\u001b[39m(inputs, parameters\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,ENDPOINT_URL\u001b[38;5;241m=\u001b[39m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menviron\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mHF_API_SUMMARY_BASE\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m): \n\u001b[0;32m      6\u001b[0m     headers \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m      7\u001b[0m       \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAuthorization\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBearer \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mhf_api_key\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      8\u001b[0m       \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mContent-Type\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mapplication/json\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      9\u001b[0m     }\n\u001b[0;32m     10\u001b[0m     data \u001b[38;5;241m=\u001b[39m { \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minputs\u001b[39m\u001b[38;5;124m\"\u001b[39m: inputs }\n",
+      "File \u001b[1;32m<frozen os>:714\u001b[0m, in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'HF_API_SUMMARY_BASE'"
+     ]
+    }
+   ],
    "source": [
     "# Helper function\n",
     "import requests, json\n",
@@ -116,6 +129,21 @@
     "                                data=json.dumps(data)\n",
     "                               )\n",
     "    return json.loads(response.content.decode(\"utf-8\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import pipeline\n",
+    "\n",
+    "get_completion = pipeline(\"summarization\", model=\"Pranav0gp/shleifer-distilbart-cnn-12-6-text_summarization\")\n",
+    "\n",
+    "def summarize(input):\n",
+    "    output = get_completion(input)\n",
+    "    return output[0]['summary_text']"
    ]
   },
   {
@@ -211,6 +239,128 @@
    "metadata": {},
    "source": [
     "We are using this Inference Endpoint for dslim/bert-base-NER, a 108M parameter fine-tuned BART model on the NER task"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import pipeline\n",
+    "\n",
+    "get_completion = pipeline(\"ner\", model=\"dslim/bert-base-NER\")\n",
+    "\n",
+    "def ner(input):\n",
+    "    output = get_completion(input)\n",
+    "    return {\"text\": input, \"entities\": output}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "gr.interface()\n",
+    "Notice below that we pass in a list [] to inputs and to outputs because the function fn (in this case, ner(), can take in more than one input and return more than one output.\n",
+    "The number of objects passed to inputs list should match the number of parameters that the fn function takes in, and the number of objects passed to the outputs list should match the number of objects returned by the fn function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ner(input):\n",
+    "    output = get_completion(input, parameters=None, ENDPOINT_URL=API_URL)\n",
+    "    return {\"text\": input, \"entities\": output}\n",
+    "\n",
+    "gr.close_all()\n",
+    "demo = gr.Interface(fn=ner,\n",
+    "                    inputs=[gr.Textbox(label=\"Text to find entities\", lines=2)],\n",
+    "                    outputs=[gr.HighlightedText(label=\"Text with entities\")],\n",
+    "                    title=\"NER with dslim/bert-base-NER\",\n",
+    "                    description=\"Find entities using the `dslim/bert-base-NER` model under the hood!\",\n",
+    "                    allow_flagging=\"never\",\n",
+    "                    #Here we introduce a new tag, examples, easy to use examples for your application\n",
+    "                    examples=[\"My name is Andrew and I live in California\", \"My name is Poli and work at HuggingFace\"])\n",
+    "demo.launch(share=True, server_port=int(os.environ['PORT3']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding a helper function to merge tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge_tokens(tokens):\n",
+    "    merged_tokens = []\n",
+    "    for token in tokens:\n",
+    "        if merged_tokens and token['entity'].startswith('I-') and merged_tokens[-1]['entity'].endswith(token['entity'][2:]):\n",
+    "            # If current token continues the entity of the last one, merge them\n",
+    "            last_token = merged_tokens[-1]\n",
+    "            last_token['word'] += token['word'].replace('##', '')\n",
+    "            last_token['end'] = token['end']\n",
+    "            last_token['score'] = (last_token['score'] + token['score']) / 2\n",
+    "        else:\n",
+    "            # Otherwise, add the token to the list\n",
+    "            merged_tokens.append(token)\n",
+    "\n",
+    "    return merged_tokens\n",
+    "\n",
+    "def ner(input):\n",
+    "    output = get_completion(input, parameters=None, ENDPOINT_URL=API_URL)\n",
+    "    merged_tokens = merge_tokens(output)\n",
+    "    return {\"text\": input, \"entities\": merged_tokens}\n",
+    "\n",
+    "gr.close_all()\n",
+    "demo = gr.Interface(fn=ner,\n",
+    "                    inputs=[gr.Textbox(label=\"Text to find entities\", lines=2)],\n",
+    "                    outputs=[gr.HighlightedText(label=\"Text with entities\")],\n",
+    "                    title=\"NER with dslim/bert-base-NER\",\n",
+    "                    description=\"Find entities using the `dslim/bert-base-NER` model under the hood!\",\n",
+    "                    allow_flagging=\"never\",\n",
+    "                    examples=[\"My name is Andrew, I'm building DeeplearningAI and I live in California\", \"My name is Poli, I live in Vienna and work at HuggingFace\"])\n",
+    "\n",
+    "demo.launch(share=True, server_port=int(os.environ['PORT4']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gr.close_all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How to get your own Hugging Face API key (token)\n",
+    "Hugging Face \"API keys\" are called \"User Access tokens\".\n",
+    "\n",
+    "You can create your own User Access Tokens here: Access Tokens.\n",
+    "\n",
+    "Save your user access tokens to environment variables\n",
+    "To save your access token securely on your own machine:\n",
+    "\n",
+    "Create a .env file in the root directory of your project.\n",
+    "Edit the file to contain the following:\n",
+    "HF_API_KEY=\"abc123\" replace that string with your user access token.\n",
+    "Save the .env file.\n",
+    "Install Python-dotenv, which allows you to run that first code cell at the top of this jupyter notebook:\n",
+    "pip install python-dotenv\n",
+    "For more information on how to get your own access tokens, please see User \n",
+    "[access tokens](https://huggingface.co/settings/tokens)"
    ]
   }
  ],
