--- a/L2_Image_captioning_app.ipynb
+++ b/L2_Image_captioning_app.ipynb
@@ -29,8 +29,8 @@
     "import base64 \n",
     "from dotenv import load_dotenv, find_dotenv\n",
     "_ = load_dotenv(find_dotenv()) # read local .env file\n",
-    "hf_api_key = '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'\n",
-    "# hf_api_key = os.environ['HF_API_KEY']"
+    "\n",
+    "hf_api_key = os.environ['HF_API_KEY']"
    ]
   },
   {
